Fix Railway deployment configuration
- Add nixpacks.toml for proper build configuration
- Create root requirements.txt and main.py for Python detection
- Update railway.json with build command
- Add setup.py for package detection
- Update Procfile to use main.py entry point

--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,6 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url"
-  },
-  "functions": {
-    "frontend/pages/api/**/*.ts": {
-      "runtime": "nodejs18.x"
-    }
+    "NEXT_PUBLIC_API_URL": "http://localhost:8000"
   }
 }
