--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
 # Root requirements.txt for Railway deployment
 # This file helps Railway detect this as a Python project
 
-# Copy requirements from backend
--r backend/requirements.txt
+# FastAPI and core dependencies
+fastapi==0.117.1
+uvicorn[standard]==0.37.0
+pydantic==2.11.9
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+sqlalchemy==2.0.25
+alembic==1.13.1
+asyncpg==0.29.0
+scikit-learn==1.7.2
+numpy>=1.21.0
+pandas>=1.3.0
+joblib>=1.0.0
+nltk==3.8.1
+openai==1.35.13
+anthropic==0.29.0
+python-dotenv==1.1.1
+httpx==0.25.2
