--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 fastapi==0.117.1
 uvicorn[standard]==0.37.0
 pydantic==2.11.9
+pydantic-settings==2.0.3
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
