Force fresh Vercel deployment - add buildCommand to bypass cache
- Add explicit buildCommand to vercel.json
- This should force Vercel to use the latest commit and bypass any caching issues
- Ensures the Railway backend connection is properly configured

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "env": {
     "NEXT_PUBLIC_API_URL": "https://web-production-4d7f.up.railway.app"
-  }
+  },
+  "buildCommand": "npm run build"
 }
