Force Vercel cache refresh - add installCommand and framework config
- Add installCommand: npm ci --force to bypass npm cache
- Add framework: nextjs for proper Next.js detection
- Add outputDirectory: .next for correct build output
- This should force Vercel to completely rebuild and use latest commit

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,5 +2,8 @@
   "env": {
     "NEXT_PUBLIC_API_URL": "https://web-production-4d7f.up.railway.app"
   },
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "installCommand": "npm ci --force",
+  "framework": "nextjs",
+  "outputDirectory": ".next"
 }
