--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,6 @@ nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-    "cd backend",
     "pip install -r requirements.txt"
 ]
 
@@ -13,4 +12,4 @@ cmds = [
 ]
 
 [start]
-cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
