--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,25 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    },
+    {
       "src": "frontend/package.json",
       "use": "@vercel/next"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
+    },
+    {
       "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "/frontend/$1"
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "http://localhost:8000"
+    "PYTHONPATH": "/var/task/backend"
   }
 }
