--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,2 @@
 fastapi==0.117.1
-pydantic==2.11.9
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+uvicorn==0.37.0
