--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,9 @@
 [phases.setup]
-nixPkgs = ["python311", "pip"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-    "python -m pip install -r requirements.txt"
+    "cd backend && pip install -r requirements.txt"
 ]
 
 [phases.build]
