--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-    "cd backend && pip install -r requirements.txt"
+    "pip install -r requirements.txt"
 ]
 
 [phases.build]
