fix: Switch to Dockerfile for Railway deployment
🔧 RAILWAY DEPLOYMENT FIX:

✅ Created Dockerfile:
- Uses Python 3.11 slim image
- Installs dependencies from root requirements.txt
- Proper working directory setup
- Clean build process

✅ Updated railway.json:
- Switched from NIXPACKS to DOCKERFILE
- Railway will use Docker instead of Nixpacks
- Should resolve pip installation issues

✅ Updated nixpacks.toml:
- Uses python -m pip instead of pip
- Fallback configuration if needed

🎯 This should finally fix the Railway deployment!

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixPkgs = ["python311"]
 
 [phases.install]
 cmds = [
-    "pip install -r requirements.txt"
+    "python -m pip install -r requirements.txt"
 ]
 
 [phases.build]
