--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,38 +10,39 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.0.18",
+    "@hookform/resolvers": "3.3.2",
+    "@supabase/supabase-js": "^2.76.1",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "typescript": "5.3.3",
-    "tailwindcss": "3.3.6",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
-    "@headlessui/react": "1.7.17",
-    "@heroicons/react": "2.0.18",
-    "framer-motion": "10.16.16",
-    "react-hook-form": "7.48.2",
-    "@hookform/resolvers": "3.3.2",
-    "zod": "3.22.4",
-    "axios": "1.6.2",
-    "react-query": "3.39.3",
-    "react-hot-toast": "2.4.1",
-    "recharts": "2.8.0",
-    "date-fns": "2.30.0",
-    "clsx": "2.0.0",
-    "lucide-react": "0.294.0",
-    "react-markdown": "9.0.1",
-    "react-syntax-highlighter": "15.5.0",
     "@types/react-syntax-highlighter": "15.5.11",
-    "remark-gfm": "4.0.0"
+    "autoprefixer": "10.4.16",
+    "axios": "1.6.2",
+    "clsx": "2.0.0",
+    "date-fns": "2.30.0",
+    "framer-motion": "10.16.16",
+    "lucide-react": "0.294.0",
+    "next": "14.0.4",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.48.2",
+    "react-hot-toast": "2.4.1",
+    "react-markdown": "9.0.1",
+    "react-query": "3.39.3",
+    "react-syntax-highlighter": "15.5.0",
+    "recharts": "2.8.0",
+    "remark-gfm": "4.0.0",
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
     "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/typography": "0.5.10"
+    "@tailwindcss/typography": "0.5.10",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4"
   }
 }
