--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# Ignore top-level Python build libs only; allow frontend/src/lib
+/lib/
+/lib64/
+!frontend/src/lib/
 parts/
 sdist/
 var/
