--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,19 @@
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.2",
     "@supabase/supabase-js": "^2.76.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "@types/react-syntax-highlighter": "15.5.11",
     "autoprefixer": "10.4.16",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
     "framer-motion": "10.16.16",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "0.294.0",
     "next": "^14.2.33",
     "postcss": "8.4.32",
