--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,23 @@
-# Python
+# Dependencies
+node_modules/
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
+*.pyc
+*.pyo
+*.pyd
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-# Ignore top-level Python build libs only; allow frontend/src/lib
-/lib/
-/lib64/
-!frontend/src/lib/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual Environment
-venv/
 env/
+venv/
 ENV/
 env.bak/
 venv.bak/
-.venv/
 
-# Environment Variables
+# Production builds
+.next/
+out/
+build/
+dist/
+
+# Environment variables
 .env
 .env.local
 .env.development.local
@@ -44,40 +28,13 @@ venv.bak/
 *.db
 *.sqlite
 *.sqlite3
-ielts_master.db
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Node.js
-node_modules/
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Next.js
-.next/
-out/
-build/
-
-# Production
-/build
-/dist
 
 # Runtime data
 pids
@@ -120,81 +77,46 @@ jspm_packages/
 .cache
 .parcel-cache
 
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
+# Next.js build output
+.next
 
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
+# Nuxt.js build / generate output
+.nuxt
+dist
 
-# Logs
-logs
-*.log
+# Gatsby files
+.cache/
+public
 
-# Machine Learning Models (exclude large model files)
-*.pkl
-*.joblib
-*.h5
-*.model
+# Storybook build outputs
+.out
+.storybook-out
 
-# Keep model structure but exclude large files
-backend/models/*.pkl
-backend/models/*/elastic_net_model.pkl
-backend/models/*/extra_trees_model.pkl
-backend/models/*/gradient_boosting_model.pkl
-backend/models/*/random_forest_model.pkl
-backend/models/*/ridge_model.pkl
-backend/models/*/elastic_net_scaler.pkl
-backend/models/*/ridge_scaler.pkl
+# Temporary folders
+tmp/
+temp/
 
-# Temporary files
-*.tmp
-*.temp
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# pyenv
-.python-version
-
-# pipenv
-Pipfile.lock
-
-# PEP 582
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+# Vercel
 .vercel
 
-# Local env files and helpers
-.env
-.env.*
-backend/.env
-backend/.env.*
-setup_env.sh
+# Railway
+.railway
+
+# Archive directory
+ARCHIVE/
