--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -1,21 +1,16 @@
-# Minimal requirements for IELTS Master Platform
-# Core Framework
+# Core Framework - Minimal for Railway
 fastapi==0.117.1
 uvicorn[standard]==0.37.0
 pydantic==2.11.9
-pydantic-settings==2.1.0
+
+# Database & ORM
+sqlalchemy==2.0.31
+asyncpg==0.29.0
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.20
-
-# ML & Data Science (minimal versions)
-scikit-learn==1.7.2
-numpy>=1.21.0
-pandas>=1.3.0
-joblib>=1.0.0
-nltk==3.8.1
 
 # AI & LLM Integration
 openai==1.35.13
