fix: Remove large ML models from repository
- Moved ML models to ARCHIVE/old-files/
- Updated .gitignore to exclude *.pkl files
- Repository now under GitHub size limits
- Ready for clean deployment

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,10 @@ Thumbs.db
 
 # Archive directory
 ARCHIVE/
+
+# ML Models (too large for GitHub)
+backend/models/
+*.pkl
+*.joblib
+*.h5
+*.model
