--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,10 @@
-# Railway Configuration for Backend
+# Railway Configuration
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && pip install -r requirements.txt"
 
 [deploy]
 startCommand = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 
 [env]
 PYTHON_VERSION = "3.11"
+PYTHONPATH = "backend"
