--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 
 [env]
 PYTHON_VERSION = "3.11"
