--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,9 @@
 # Railway Configuration for Backend
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && pip install -r requirements.txt"
 
 [deploy]
-startCommand = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "./start.sh"
 
 [env]
 PYTHON_VERSION = "3.11"
