Add root package.json and fix Vercel configuration for proper deployment

--- a/ielts-master-platform/vercel.json
+++ b/ielts-master-platform/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd frontend && npm run build",
-  "installCommand": "cd frontend && npm ci",
+  "buildCommand": "npm run build",
+  "installCommand": "npm ci",
   "framework": "nextjs",
   "outputDirectory": "frontend/.next",
   "rootDirectory": "frontend",
