--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "cd frontend && npm run build",
-  "installCommand": "cd frontend && npm install",
-  "outputDirectory": "frontend/.next",
+  "version": 2,
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/$1"
+    }
+  ],
   "env": {
     "NEXT_PUBLIC_API_URL": "https://web-production-4d7f.up.railway.app",
     "NEXT_PUBLIC_AUTH_PROVIDER": "backend",
