--- a/package.json
+++ b/package.json
@@ -9,9 +9,46 @@
     "lint": "cd frontend && npm run lint",
     "install": "cd frontend && npm install"
   },
-  "workspaces": [
-    "frontend"
-  ],
+  "dependencies": {
+    "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.0.18",
+    "@hookform/resolvers": "3.3.2",
+    "@supabase/supabase-js": "^2.76.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "@types/react-syntax-highlighter": "15.5.11",
+    "autoprefixer": "10.4.16",
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "clsx": "2.0.0",
+    "date-fns": "2.30.0",
+    "framer-motion": "10.16.16",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "0.294.0",
+    "next": "^14.2.33",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.48.2",
+    "react-hot-toast": "2.4.1",
+    "react-markdown": "9.0.1",
+    "react-query": "3.39.3",
+    "react-syntax-highlighter": "^16.0.0",
+    "recharts": "2.8.0",
+    "remark-gfm": "4.0.0",
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3",
+    "zod": "3.22.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.10",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
